force-app/zurich-base/main/default/objects/IBADocument__c/IBADocument__c.object-meta.xml
<CustomObject>
    <label>Documento IBA</label>
    <nameField>
        <label>Nombre de Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos IBA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>