force-app/zurich-base/main/default/objects/IBADocument__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <label>Fecha documento</label>
    <type>Date</type>
</CustomField>