force-app/zurich-base/main/default/objects/IBADocument__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Póliza</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>Documentos_IBA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>