force-app/zurich-base/main/default/objects/IBADocument__c/fields/PolicyNum__c.field-meta.xml
<CustomField>
    <fullName>PolicyNum__c</fullName>
    <label>Número de póliza</label>
    <length>80</length>
    <type>Text</type>
</CustomField>